<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Age Calculator</string>
    <string name="welcome">WELCOME</string>
    <string name="to">TO</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="Select">Select</string>
    <string name="calculate">Calculate</string>
    <string name="today" tools:ignore="StringEscaping">Today\'s Date</string>
    <string name="selected">Selected Date</string>
    <string name="age_about">__ Years, __ Months,  __ Days</string>
    <string name="age">Your age</string>
</resources>