<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"
        android:padding="1dp"
        android:layout_gravity="center_horizontal"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_calculator"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
/>

    <Button
        android:id="@+id/click_to_show_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select"
        android:backgroundTint="@color/purple_200"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/showing_today_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="__/__/____"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:editable="false"
        tools:ignore="Deprecated" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/today"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:editable="false"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/showing_selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="__/__/____"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        tools:ignore="InvalidId" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/selected"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:editable="false"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/showing_your_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/age_about"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:editable="false"
        tools:ignore="Deprecated,InvalidId"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/age"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:editable="false"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:backgroundTint="@color/purple_200"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/calculate"
 />
</LinearLayout>